--- a/foundations/intro-to-css/01-css-methods/index.html
+++ b/foundations/intro-to-css/01-css-methods/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.tailwindcss.com"></script>
     <title>Methods for Adding CSS</title>
   </head>
   <body>
-    <div>Style me via the external method!</div>
-    <p>I would like to be styled with the internal method, please.</p>
-    <button>Inline Method</button>
+    <div class="bg-red-700 flex text-white text-[32px] m-1 justify-center font-bold">Style me via the external method!</div>
+    <p class="bg-green-700 text-white text-[18px] m-1">I would like to be styled with the internal method, please.</p>
+    <button class="bg-orange-700 text-[18px] m-1">Inline Method</button>
   </body>
 </html>
