--- a/foundations/intro-to-css/05-descendant-combinator/index.html
+++ b/foundations/intro-to-css/05-descendant-combinator/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Tailwind CDN: add utility classes like `text-red-500` -->
+    <script src="https://cdn.tailwindcss.com"></script>
     <title>Descendant Combinator</title>
     <link rel="stylesheet" href="style.css">
   </head>
