--- a/foundations/intro-to-css/03-grouping-selectors/index.html
+++ b/foundations/intro-to-css/03-grouping-selectors/index.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Tailwind CDN: add utility classes like `text-red-500` -->
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Grouping Selectors</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <button>Click Me!</button>
-    <button>No, Click Me!</button>
+    <button class="clickmebtn">Click Me!</button>
+    <button class="noclickmebtn">No, Click Me!</button>
   </body>
 </html>
