--- a/foundations/intro-to-css/04-chaining-selectors/index.html
+++ b/foundations/intro-to-css/04-chaining-selectors/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Tailwind CDN: add utility classes like `text-red-500` -->
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Chaining Selectors</title>
     <link rel="stylesheet" href="style.css">
   </head>
-  <body>
+  <body class="flex flex-col">
     <!-- Use the classes BELOW this line -->
     <div>
       <img class="avatar proportioned" src="./images/pexels-katho-mutodo-8434791.jpg" alt="Woman with glasses">
